--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,141 +6,167 @@
   box-sizing: border-box;
 }
 
-body{
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size:16px;
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
 }
 
-
-header{
-    width:100%;
-    background:#218380;
-    display:Flex;
-    justify-content: space-between;
-    padding:20px;
-    color:#ffffff;
+header {
+  width: 100%;
+  background: #218380;
+  display: Flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding: 20px;
+  color: #ffffff;
 }
 
-.container{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background:#ffffff;
-
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #ffffff;
 }
 
-main{
-    width:60%;
-    border-radius:20px;
-    background:#ffffff;
-    box-shadow:5px 2px 7px 2px rgba(0,0,0,0.1);
-    border:1px solid rgba(0,0,0,0.1);
-    padding:20px 10px 20px 20px;
-    margin:130px auto auto auto;
-
+main {
+  width: 60%;
+  border-radius: 20px;
+  background: #ffffff;
+  box-shadow: 5px 2px 7px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 20px 10px 20px 20px;
+  margin: 130px auto auto auto;
 }
 
-.high-scores{
-    padding:30px 20px 20px 30px;
-    width:300px;
+.high-scores {
+  padding: 30px 20px 20px 30px;
+  width: 300px;
 }
 
-h1{
-    font-size:24px;
-    margin-bottom:5px;
-    /* border-bottom: 1px solid grey; */
+h1 {
+  font-size: 24px;
+  margin-bottom: 5px;
 }
 
-p{
-    margin:10px 0px;
-    padding-right:7px;
+p {
+  margin: 10px 0px;
+  padding-right: 7px;
 }
 
-button{
-    background:#218380;
-    height:40px;
-    width:90px;
-    border-radius:5px;
-    border:none;
-    color:#ffffff;
-    padding:10px;
-    margin-top:5px;
-    margin-right:10px;
-    font-size: 15px;
+table {
+  table-layout: fixed;
+  width: 60%;
 }
 
-#clear-highscores{
-    width:120px;
+   
+tr:nth-child(even) {
+    background-color: rgba(33, 131, 128, 0.5);
 }
 
-.high-scores{
-    width: 80%;
-    height:auto;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+tr:nth-child(odd) {
+    background-color: rgba(33, 131, 128, 0.6);
 }
 
-.score-container{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    width:100%;
-    flex-direction: column;
+td{
+    border-radius: 5px;
 }
 
-.row{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    width:50%;
+td,
+th {
+  padding: 20px;
 }
 
-.row h3{
-    width: 15%;
-}
-a{
-    text-decoration:none;
-    color:inherit;
+td.shrink {
+  word-break: break-all;
 }
 
-ul{
-    list-style:none;
+th {
+  text-align: left;
 }
 
-li{
-    cursor:pointer;
+button {
+  background: #218380;
+  height: 40px;
+  width: 90px;
+  border-radius: 5px;
+  border: none;
+  color: #ffffff;
+  padding: 10px;
+  margin-top: 5px;
+  margin-right: 10px;
+  font-size: 15px;
 }
 
-.quiz-question{
-    margin-bottom:10px;
+#clear-highscores {
+  width: 120px;
+}
+
+.high-scores {
+  width: 80%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.score-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  cursor: pointer;
+}
+
+.quiz-question {
+  margin-bottom: 10px;
 }
 
 .answer {
-    background:#218380;
-    width:100%;
-    height:35px;
-    margin-bottom:5px;
-    border-radius:5px;
-    padding:7px;
-    padding-left:10px;
-    color:#ffffff;
+  background: #218380;
+  width: 100%;
+  height: 35px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  padding: 7px;
+  padding-left: 10px;
+  color: #ffffff;
 }
 
-.right-answer{
-    border-top:1px solid rgba(0,0,0,0.8);
-    padding:15px 0 15px 5px;
-    height:40px;
-    background-color: rgba(0,128,0, 0.5);
+.right-answer {
+  border-top: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 15px 0 15px 5px;
+  height: 40px;
+  background-color: rgba(0, 128, 0, 0.5);
 }
 
-.wrong-answer{
-    border-top:1px solid rgb(0,0,0);
-    padding:15px 0 15px 5px;
-    height:30px;
-    background-color: rgba(255,0,0, 0.5);
+.wrong-answer {
+  border-top: 1px solid rgb(0, 0, 0);
+  padding: 15px 0 15px 5px;
+  height: 40px;
+  background-color: rgba(255, 0, 0, 0.5);
+}
+
+.name-alert {
+  background-color: rgba(255, 0, 0, 0.5);
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
 }
 
 /* .correct{
@@ -151,125 +177,115 @@ li{
     background-color: rgba(255,0,0, 0.5);
 } */
 
-.hide{
-    display:none;
+.hide {
+  display: none;
 }
 
-.end{
-    padding:20px;
+.end {
+  padding: 20px;
 }
 
-.more{
-    background:#218380;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 5px 0;
+.more {
+  background: #218380;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 5px 0;
 }
 
-.button-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
 }
 
-.button-container a{
-    background:#218380;
-    height:40px;
-    width:90px;
-    border-radius:5px;
-    border:none;
-    color:#ffffff;
-    padding:10px;
-    margin-top:5px;
-    margin-right:10px;
-    font-size: 15px;
+.button-container a {
+  background: #218380;
+  height: 40px;
+  width: 90px;
+  border-radius: 5px;
+  border: none;
+  color: #ffffff;
+  padding: 10px;
+  margin-top: 5px;
+  margin-right: 10px;
+  font-size: 15px;
 }
 
-.user-details{
-    margin-top:5px;
-    display:flex;
-    justify-content:flex-start;
-    align-items:flex-start;
-    border-radius: 5px;
-    flex-direction: column;
-    gap:2px;
+.user-details {
+  margin-top: 5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-radius: 5px;
+  flex-direction: column;
+  gap: 2px;
 }
 
-input{
-    width:120px;
-    height:30px;
-   /* // margin:0px 10px; */
+input {
+  width: 120px;
+  height: 30px;
 }
 
-#submit{
-    /* width:60px;
-    height:35px; */
-    border-radius:5px;
-    /* padding:5px; */
+#submit {
+  border-radius: 5px;
 }
 
-.highscores-list{
-    margin: 20px 0;
+.highscores-list {
+  margin: 20px 0;
 }
-
 
 @media only screen and (max-width: 786px) {
-    main{
-        width:60%;
-        padding:40px 30px 40px 40px;
-    }
+  main {
+    width: 60%;
+    padding: 40px 30px 40px 40px;
+  }
 
-    h1{
-        margin-top:18px;
-    }
-    p{
-        padding-right:0px;
-    }
+  h1 {
+    margin-top: 18px;
+  }
+  p {
+    padding-right: 0px;
+  }
 
-    .row{
-        width:100%;
-    }
+  table {
+    width: 90%;
+  }
 }
 
 @media only screen and (max-width: 500px) {
-    main{
-        width:100%;
-        padding:10px;
-        margin: 10px;
-        margin:130px 10px auto 10px;
-        
-    }
+  main {
+    width: 100%;
+    padding: 10px;
+    margin: 10px;
+    margin: 130px 10px auto 10px;
+  }
 
-   
+  h1 {
+    margin-top: 18px;
+  }
+  p {
+    padding-right: 0px;
+  }
 
-    .high-scores{
-        padding:5px;
-        width:100%;
-    }
+  .button-container {
+    flex-direction: column;
+    margin: 10px 0;
+  }
 
-    h1{
-        margin-top:18px;
-    }
-    p{
-        padding-right:0px;
-    }
+  table {
+    width: 100%;
+  }
 
-    .button-container{
-        flex-direction: column;
-        margin: 10px 0;
-    }
-
-    /* .row{
-        width:100%;
-    } */
+  td:nth-of-type(4),
+  th:nth-of-type(4) {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 350px) {
-    .extra{
-        display:none;
-    }
-    .row{
-        justify-content: space-around;
-    }
+  td:nth-of-type(3),
+  th:nth-of-type(3) {
+    display: none;
+  }
 }
