--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ li {
 .answer {
   background: #218380;
   width: 100%;
-  height: 35px;
+  /* height: 35px; */
   margin-bottom: 5px;
   border-radius: 5px;
   padding: 7px;
