--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,20 +256,50 @@ input {
 
 .question-container {
   margin:15px 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .row-head,.rows_content{
   display: flex;
-  justify-content:space-between;
+  justify-content:flex-start;
   align-items:center;
   flex-direction: rows;
   margin-bottom: 10px;
+  gap: 20%;
+}
+.row{
+ margin: 7px 0;
 }
 
 .actions{
   display: flex;
-  gap:5px;
+  gap:10px;
+  margin: 7px 0;
 }
+
+.admin button{
+  width: 130px;
+  margin: 15px 0;
+  cursor: pointer;
+}
+
+.small{
+  width:10%;
+}
+
+form div{
+  margin: 25px 0;
+  display: flex;
+  flex-direction: column;
+}
+label{
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+
 
 
 
@@ -305,7 +335,7 @@ input {
 
 @media only screen and (max-width: 500px) {
   main {
-    width: 100%;
+    width: 95%;
     padding: 10px;
     margin: 10px;
     margin: 130px 10px auto 10px;
